--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "socket.io": "^2.1.1",
+    "socket.io-client": "^2.2.0",
     "tmi.js": "^1.2.1"
   }
 }
