--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "react-dom": "^16.5.1",
     "react-scripts": "1.1.5",
     "react-transition-group": "^2.4.0",
-    "socket.io-client": "^2.2.0",
-    "twitch-bot": "^1.2.5"
+    "twitch-bot": "^1.2.5",
+    "ws": "^7.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
