--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "dependencies": {
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.2.0",
-    "tmi.js": "^1.2.1"
+    "tmi.js": "^1.2.1",
+    "ws": "^7.0.1"
   }
 }
