--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "helmet": "^3.18.0",
     "tmi.js": "^1.2.1",
     "ws": "^7.0.1"
   }
